CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

AUTO_SOURCES(unit_SOURCES "*.cc" "RECURSE" ${CMAKE_CURRENT_SOURCE_DIR})

FIND_PACKAGE(GTest REQUIRED)

INCLUDE_DIRECTORIES(${univplan_ROOT_DIR}/test/unit)
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})

ADD_EXECUTABLE(unit EXCLUDE_FROM_ALL
    ${unit_SOURCES}
)

target_link_libraries(unit ${CLANG_LDFLAGS} univplan-shared gtest gmock)
